{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 1111,
  "lineage": "d14f59ae-b3f7-138f-1775-3ac2c3ca9a23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "account_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045b03a959c7fb432",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:elastic-ip/eipalloc-045b03a959c7fb432",
            "domain": "vpc",
            "id": "eipalloc-045b03a959c7fb432",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-74-59-3.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.59.3",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "eipalloc-045b03a959c7fb432",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "customer_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2e3e2aea34ff5c6",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:elastic-ip/eipalloc-0f2e3e2aea34ff5c6",
            "domain": "vpc",
            "id": "eipalloc-0f2e3e2aea34ff5c6",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-220-29-212.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.29.212",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "eipalloc-0f2e3e2aea34ff5c6",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "statement_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5fcf600812987a5",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:elastic-ip/eipalloc-0f5fcf600812987a5",
            "domain": "vpc",
            "id": "eipalloc-0f5fcf600812987a5",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-47-128-163-111.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.163.111",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "eipalloc-0f5fcf600812987a5",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "account_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-0fa5b72a4b062780f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa5b72a4b062780f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fake-service-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0301e5ca969cd205d"
              }
            ],
            "primary_network_interface_id": "eni-0301e5ca969cd205d",
            "private_dns": "ip-172-16-2-111.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.111",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e17970731c95ee7f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9cea61da60288d",
            "tags": {
              "Name": "account-app-a"
            },
            "tags_all": {
              "Name": "account-app-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e225d143b171c3c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-0fa5b72a4b062780f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_instance.statement_app_a",
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb.statement",
            "aws_security_group.account_alb",
            "aws_security_group.account_ec2",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.account_private_a",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.account",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "account_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-035adb5a075f3768b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035adb5a075f3768b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fake-service-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06c38f750fa1f3cd5"
              }
            ],
            "primary_network_interface_id": "eni-06c38f750fa1f3cd5",
            "private_dns": "ip-172-16-3-52.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.52",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0eb908090804b1e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057e14858003920ac",
            "tags": {
              "Name": "account-app-b"
            },
            "tags_all": {
              "Name": "account-app-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e225d143b171c3c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-035adb5a075f3768b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_instance.statement_app_a",
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb.statement",
            "aws_security_group.account_alb",
            "aws_security_group.account_ec2",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.account_private_b",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.account",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-0486256469349a7d0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0486256469349a7d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fake-service-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0431ee6170bc16a8b"
              }
            ],
            "primary_network_interface_id": "eni-0431ee6170bc16a8b",
            "private_dns": "ip-10-0-1-190.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-54-255-140-118.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.140.118",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-095c0bc8c676aec23",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079e98b10ba73f513",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de042a6779e852e3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-0486256469349a7d0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.fake_service_app",
            "aws_security_group.bastion",
            "aws_subnet.customer_public_a",
            "aws_vpc.customer-profile",
            "data.aws_ami.ubuntu",
            "local_file.private_key",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "customer_profile_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-014767dbc5ccec302",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014767dbc5ccec302",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fake-service-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0faa833b1b9d8213a"
              }
            ],
            "primary_network_interface_id": "eni-0faa833b1b9d8213a",
            "private_dns": "ip-10-0-2-207.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.207",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-042eaddbff867574c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02455e5f63d04ebef",
            "tags": {
              "Name": "customer-profile-app-a"
            },
            "tags_all": {
              "Name": "customer-profile-app-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099a3c86b74842342"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-014767dbc5ccec302",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_instance.account_app_a",
            "aws_instance.account_app_b",
            "aws_instance.statement_app_a",
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb.account",
            "aws_lb.statement",
            "aws_security_group.account_alb",
            "aws_security_group.account_ec2",
            "aws_security_group.bastion",
            "aws_security_group.customer_profile_alb",
            "aws_security_group.customer_profile_ec2",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.account_private_a",
            "aws_subnet.account_private_b",
            "aws_subnet.customer_private_a",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "customer_profile_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-0a4f8436cff815b9e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4f8436cff815b9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fake-service-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06da6754e7c8ec2a7"
              }
            ],
            "primary_network_interface_id": "eni-06da6754e7c8ec2a7",
            "private_dns": "ip-10-0-3-72.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.72",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-031cb606f67a4d6a1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0552277bcb0935e4d",
            "tags": {
              "Name": "customer-profile-app-b"
            },
            "tags_all": {
              "Name": "customer-profile-app-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099a3c86b74842342"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-0a4f8436cff815b9e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_instance.account_app_a",
            "aws_instance.account_app_b",
            "aws_instance.statement_app_a",
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb.account",
            "aws_lb.statement",
            "aws_security_group.account_alb",
            "aws_security_group.account_ec2",
            "aws_security_group.bastion",
            "aws_security_group.customer_profile_alb",
            "aws_security_group.customer_profile_ec2",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.account_private_a",
            "aws_subnet.account_private_b",
            "aws_subnet.customer_private_b",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "statement_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-04e9ec24ce5ab573e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e9ec24ce5ab573e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fake-service-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c45737975ecfbf8f"
              }
            ],
            "primary_network_interface_id": "eni-0c45737975ecfbf8f",
            "private_dns": "ip-192-168-2-201.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.201",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4b12e2a82f8a99d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ef7e2d3d957b5e7",
            "tags": {
              "Name": "statement-app-a"
            },
            "tags_all": {
              "Name": "statement-app-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6694806d06308c0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-04e9ec24ce5ab573e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.fake_service_app",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.statement_private_a",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "statement_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-0b76f3c5287501aa1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b76f3c5287501aa1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fake-service-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b5f6285612b1a7d0"
              }
            ],
            "primary_network_interface_id": "eni-0b5f6285612b1a7d0",
            "private_dns": "ip-192-168-3-19.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.19",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-018dd6ef6704b18ea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e08c555f5ea0f0f",
            "tags": {
              "Name": "statement-app-b"
            },
            "tags_all": {
              "Name": "statement-app-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6694806d06308c0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-0b76f3c5287501aa1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.fake_service_app",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.statement_private_b",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:internet-gateway/igw-0418050feadfad298",
            "id": "igw-0418050feadfad298",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "account-igw"
            },
            "tags_all": {
              "Name": "account-igw"
            },
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "igw-0418050feadfad298",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "customer-profile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:internet-gateway/igw-007d99bdbfdf1e626",
            "id": "igw-007d99bdbfdf1e626",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "customer-profile-igw"
            },
            "tags_all": {
              "Name": "customer-profile-igw"
            },
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "igw-007d99bdbfdf1e626",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "statement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:internet-gateway/igw-01b4b8ab245475da1",
            "id": "igw-01b4b8ab245475da1",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "statement-igw"
            },
            "tags_all": {
              "Name": "statement-igw"
            },
            "vpc_id": "vpc-01026093648037a86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "igw-01b4b8ab245475da1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/account-alb/e272ab609eba1b4a",
            "arn_suffix": "app/account-alb/e272ab609eba1b4a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-account-alb-317075303.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/account-alb/e272ab609eba1b4a",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "account-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0445eb2b10c698b80"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057e14858003920ac"
              },
              {
                "subnet_id": "subnet-0bb9cea61da60288d"
              }
            ],
            "subnets": [
              "subnet-057e14858003920ac",
              "subnet-0bb9cea61da60288d"
            ],
            "tags": {
              "Name": "account-alb"
            },
            "tags_all": {
              "Name": "account-alb"
            },
            "vpc_id": "vpc-0f6141098dbc97744",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/account-alb/e272ab609eba1b4a"
          },
          "dependencies": [
            "aws_security_group.account_alb",
            "aws_subnet.account_private_a",
            "aws_subnet.account_private_b",
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "customer_profile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/customer-profile-alb/67b3aa9e1f09362a",
            "arn_suffix": "app/customer-profile-alb/67b3aa9e1f09362a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "customer-profile-alb-535646117.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/customer-profile-alb/67b3aa9e1f09362a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "customer-profile-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0ac16b64cd36c6d55"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079e98b10ba73f513"
              },
              {
                "subnet_id": "subnet-0dd47138873adf3bf"
              }
            ],
            "subnets": [
              "subnet-079e98b10ba73f513",
              "subnet-0dd47138873adf3bf"
            ],
            "tags": {
              "Name": "customer-profile-alb"
            },
            "tags_all": {
              "Name": "customer-profile-alb"
            },
            "vpc_id": "vpc-074b950970830d8c2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/customer-profile-alb/67b3aa9e1f09362a"
          },
          "dependencies": [
            "aws_security_group.customer_profile_alb",
            "aws_subnet.customer_public_a",
            "aws_subnet.customer_public_b",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "statement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/statement-alb/21182f6cefa3caaf",
            "arn_suffix": "app/statement-alb/21182f6cefa3caaf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-statement-alb-240545353.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/statement-alb/21182f6cefa3caaf",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "statement-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-091423fb68ba7217f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ef7e2d3d957b5e7"
              },
              {
                "subnet_id": "subnet-08e08c555f5ea0f0f"
              }
            ],
            "subnets": [
              "subnet-02ef7e2d3d957b5e7",
              "subnet-08e08c555f5ea0f0f"
            ],
            "tags": {
              "Name": "statement-alb"
            },
            "tags_all": {
              "Name": "statement-alb"
            },
            "vpc_id": "vpc-01026093648037a86",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/statement-alb/21182f6cefa3caaf"
          },
          "dependencies": [
            "aws_security_group.statement_alb",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "account_http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/account-alb/e272ab609eba1b4a/72085d15be9a6829",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/account-alb/e272ab609eba1b4a/72085d15be9a6829",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/account-alb/e272ab609eba1b4a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/account-alb/e272ab609eba1b4a/72085d15be9a6829"
          },
          "dependencies": [
            "aws_lb.account",
            "aws_security_group.account_alb",
            "aws_subnet.account_private_a",
            "aws_subnet.account_private_b",
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "account_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/account-alb/e272ab609eba1b4a/70291759647037ec",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:810421502375:certificate/9787727c-9f1f-447d-b69d-a4150c0a93f8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/account-alb/e272ab609eba1b4a/70291759647037ec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/account-alb/e272ab609eba1b4a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/account-alb/e272ab609eba1b4a/70291759647037ec"
          },
          "dependencies": [
            "aws_acm_certificate.account",
            "aws_acm_certificate_validation.account",
            "aws_lb.account",
            "aws_lb_target_group.account",
            "aws_route53_record.account_cert_validation",
            "aws_security_group.account_alb",
            "aws_subnet.account_private_a",
            "aws_subnet.account_private_b",
            "aws_vpc.account",
            "data.aws_route53_zone.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "customer_profile_http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/customer-profile-alb/67b3aa9e1f09362a/bf88502ccd7f3c68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/customer-profile-alb/67b3aa9e1f09362a/bf88502ccd7f3c68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/customer-profile-alb/67b3aa9e1f09362a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/customer-profile-alb/67b3aa9e1f09362a/bf88502ccd7f3c68"
          },
          "dependencies": [
            "aws_lb.customer_profile",
            "aws_security_group.customer_profile_alb",
            "aws_subnet.customer_public_a",
            "aws_subnet.customer_public_b",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "customer_profile_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/customer-profile-alb/67b3aa9e1f09362a/8f5f6835bfbbe783",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:810421502375:certificate/7067166b-3a7f-4f61-81a1-899156cb391b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/customer-profile-alb/67b3aa9e1f09362a/8f5f6835bfbbe783",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/customer-profile-alb/67b3aa9e1f09362a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/customer-profile-alb/67b3aa9e1f09362a/8f5f6835bfbbe783"
          },
          "dependencies": [
            "aws_acm_certificate.customer_profile",
            "aws_acm_certificate_validation.customer_profile",
            "aws_lb.customer_profile",
            "aws_lb_target_group.customer_profile",
            "aws_route53_record.customer_profile_cert_validation",
            "aws_security_group.customer_profile_alb",
            "aws_subnet.customer_public_a",
            "aws_subnet.customer_public_b",
            "aws_vpc.customer-profile",
            "data.aws_route53_zone.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "statement_http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/statement-alb/21182f6cefa3caaf/769432a99d59227c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/statement-alb/21182f6cefa3caaf/769432a99d59227c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/statement-alb/21182f6cefa3caaf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/statement-alb/21182f6cefa3caaf/769432a99d59227c"
          },
          "dependencies": [
            "aws_lb.statement",
            "aws_security_group.statement_alb",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "statement_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/statement-alb/21182f6cefa3caaf/f08e340211b99c32",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:810421502375:certificate/374a4ddd-bba2-434d-ab72-50762a1188c8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/statement-alb/21182f6cefa3caaf/f08e340211b99c32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:loadbalancer/app/statement-alb/21182f6cefa3caaf",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:listener/app/statement-alb/21182f6cefa3caaf/f08e340211b99c32"
          },
          "dependencies": [
            "aws_acm_certificate.statement",
            "aws_acm_certificate_validation.statement",
            "aws_lb.statement",
            "aws_lb_target_group.statement",
            "aws_route53_record.statement_cert_validation",
            "aws_security_group.statement_alb",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.statement",
            "data.aws_route53_zone.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf",
            "arn_suffix": "targetgroup/account-tg/447f29accb410ebf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "account-tg",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "account-target-group"
            },
            "tags_all": {
              "Name": "account-target-group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf"
          },
          "dependencies": [
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "customer_profile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714",
            "arn_suffix": "targetgroup/customer-profile-tg/a11a286a55452714",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "customer-profile-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "customer-profile-target-group"
            },
            "tags_all": {
              "Name": "customer-profile-target-group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714"
          },
          "dependencies": [
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "statement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903",
            "arn_suffix": "targetgroup/statement-tg/9a80ce75b7de3903",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "statement-tg",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "statement-target-group"
            },
            "tags_all": {
              "Name": "statement-target-group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01026093648037a86"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903"
          },
          "dependencies": [
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "account_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf,i-0fa5b72a4b062780f,8081",
            "port": 8081,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf",
            "target_id": "i-0fa5b72a4b062780f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "port": 8081,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf",
            "target_id": "i-0fa5b72a4b062780f"
          },
          "dependencies": [
            "aws_instance.account_app_a",
            "aws_instance.statement_app_a",
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb.statement",
            "aws_lb_target_group.account",
            "aws_security_group.account_alb",
            "aws_security_group.account_ec2",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.account_private_a",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.account",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "account_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf,i-035adb5a075f3768b,8081",
            "port": 8081,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf",
            "target_id": "i-035adb5a075f3768b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "port": 8081,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/account-tg/447f29accb410ebf",
            "target_id": "i-035adb5a075f3768b"
          },
          "dependencies": [
            "aws_instance.account_app_b",
            "aws_instance.statement_app_a",
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb.statement",
            "aws_lb_target_group.account",
            "aws_security_group.account_alb",
            "aws_security_group.account_ec2",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.account_private_b",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.account",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "customer_profile_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714,i-014767dbc5ccec302,8080",
            "port": 8080,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714",
            "target_id": "i-014767dbc5ccec302"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "port": 8080,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714",
            "target_id": "i-014767dbc5ccec302"
          },
          "dependencies": [
            "aws_instance.account_app_a",
            "aws_instance.account_app_b",
            "aws_instance.customer_profile_app_a",
            "aws_instance.statement_app_a",
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb.account",
            "aws_lb.statement",
            "aws_lb_target_group.customer_profile",
            "aws_security_group.account_alb",
            "aws_security_group.account_ec2",
            "aws_security_group.bastion",
            "aws_security_group.customer_profile_alb",
            "aws_security_group.customer_profile_ec2",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.account_private_a",
            "aws_subnet.account_private_b",
            "aws_subnet.customer_private_a",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "customer_profile_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714,i-0a4f8436cff815b9e,8080",
            "port": 8080,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714",
            "target_id": "i-0a4f8436cff815b9e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "port": 8080,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/customer-profile-tg/a11a286a55452714",
            "target_id": "i-0a4f8436cff815b9e"
          },
          "dependencies": [
            "aws_instance.account_app_a",
            "aws_instance.account_app_b",
            "aws_instance.customer_profile_app_b",
            "aws_instance.statement_app_a",
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb.account",
            "aws_lb.statement",
            "aws_lb_target_group.customer_profile",
            "aws_security_group.account_alb",
            "aws_security_group.account_ec2",
            "aws_security_group.bastion",
            "aws_security_group.customer_profile_alb",
            "aws_security_group.customer_profile_ec2",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.account_private_a",
            "aws_subnet.account_private_b",
            "aws_subnet.customer_private_b",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_private_b",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "statement_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903,i-04e9ec24ce5ab573e,8082",
            "port": 8082,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903",
            "target_id": "i-04e9ec24ce5ab573e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "port": 8082,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903",
            "target_id": "i-04e9ec24ce5ab573e"
          },
          "dependencies": [
            "aws_instance.statement_app_a",
            "aws_key_pair.fake_service_app",
            "aws_lb_target_group.statement",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.statement_private_a",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "statement_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903,i-0b76f3c5287501aa1,8082",
            "port": 8082,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903",
            "target_id": "i-0b76f3c5287501aa1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "port": 8082,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:810421502375:targetgroup/statement-tg/9a80ce75b7de3903",
            "target_id": "i-0b76f3c5287501aa1"
          },
          "dependencies": [
            "aws_instance.statement_app_b",
            "aws_key_pair.fake_service_app",
            "aws_lb_target_group.statement",
            "aws_security_group.statement_alb",
            "aws_security_group.statement_ec2",
            "aws_subnet.statement_private_b",
            "aws_vpc.statement",
            "data.aws_ami.ubuntu",
            "tls_private_key.fake_service_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045b03a959c7fb432",
            "association_id": "eipassoc-04628a177da20ea02",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a140f29f03992e3a",
            "network_interface_id": "eni-0bf9272858f33090f",
            "private_ip": "172.16.1.116",
            "public_ip": "52.74.59.3",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017e6541bdf828227",
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "nat-0a140f29f03992e3a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.account_nat",
            "aws_internet_gateway.account",
            "aws_subnet.account_public_a",
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2e3e2aea34ff5c6",
            "association_id": "eipassoc-0863904524960470a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-084b66afc9729ae44",
            "network_interface_id": "eni-01d6329b7c932b780",
            "private_ip": "10.0.1.66",
            "public_ip": "52.220.29.212",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079e98b10ba73f513",
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "nat-084b66afc9729ae44",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.customer_nat",
            "aws_internet_gateway.customer-profile",
            "aws_subnet.customer_public_a",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "statement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5fcf600812987a5",
            "association_id": "eipassoc-0912590c403c74e95",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06fd321326cb64f8a",
            "network_interface_id": "eni-0f0092e072bf706c9",
            "private_ip": "192.168.1.247",
            "public_ip": "47.128.163.111",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00de644507aa60ae8",
            "vpc_id": "vpc-01026093648037a86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "nat-06fd321326cb64f8a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.statement_nat",
            "aws_internet_gateway.statement",
            "aws_subnet.statement_public_a",
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "account_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-0682197cfd858d22b",
            "id": "rtb-0682197cfd858d22b",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a140f29f03992e3a",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-023cc7ec9aefade2d"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-096af80884c69eb19"
              }
            ],
            "tags": {
              "Name": "account-private-rt"
            },
            "tags_all": {
              "Name": "account-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-0682197cfd858d22b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.account_nat",
            "aws_internet_gateway.account",
            "aws_nat_gateway.account",
            "aws_subnet.account_public_a",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc.statement",
            "aws_vpc_peering_connection.account_statement",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "account_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-0ad1e9a8e6e584fe5",
            "id": "rtb-0ad1e9a8e6e584fe5",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0418050feadfad298",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-023cc7ec9aefade2d"
              }
            ],
            "tags": {
              "Name": "account-public-rt"
            },
            "tags_all": {
              "Name": "account-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-0ad1e9a8e6e584fe5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.account",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-0931782e69b69a067",
            "id": "rtb-0931782e69b69a067",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084b66afc9729ae44",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-023cc7ec9aefade2d"
              }
            ],
            "tags": {
              "Name": "customer-profile-private-rt"
            },
            "tags_all": {
              "Name": "customer-profile-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-0931782e69b69a067",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.customer_nat",
            "aws_internet_gateway.customer-profile",
            "aws_nat_gateway.customer",
            "aws_subnet.customer_public_a",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-078ac3bc95e46ce04",
            "id": "rtb-078ac3bc95e46ce04",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007d99bdbfdf1e626",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer-profile-public-rt"
            },
            "tags_all": {
              "Name": "customer-profile-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-078ac3bc95e46ce04",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.customer-profile",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "statement_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-045a4b7b847dba41d",
            "id": "rtb-045a4b7b847dba41d",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06fd321326cb64f8a",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-096af80884c69eb19"
              }
            ],
            "tags": {
              "Name": "statement-private-rt"
            },
            "tags_all": {
              "Name": "statement-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01026093648037a86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-045a4b7b847dba41d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.statement_nat",
            "aws_internet_gateway.statement",
            "aws_nat_gateway.statement",
            "aws_subnet.statement_public_a",
            "aws_vpc.account",
            "aws_vpc.statement",
            "aws_vpc_peering_connection.account_statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "statement_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-08e4eccda3c5130d8",
            "id": "rtb-08e4eccda3c5130d8",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b4b8ab245475da1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "statement-public-rt"
            },
            "tags_all": {
              "Name": "statement-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01026093648037a86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-08e4eccda3c5130d8",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.statement",
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "account_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066c49a90658088b5",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0682197cfd858d22b",
            "subnet_id": "subnet-0bb9cea61da60288d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-066c49a90658088b5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.account_nat",
            "aws_internet_gateway.account",
            "aws_nat_gateway.account",
            "aws_route_table.account_private",
            "aws_subnet.account_private_a",
            "aws_subnet.account_public_a",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc.statement",
            "aws_vpc_peering_connection.account_statement",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "account_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccb352560a704712",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0682197cfd858d22b",
            "subnet_id": "subnet-057e14858003920ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-0ccb352560a704712",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.account_nat",
            "aws_internet_gateway.account",
            "aws_nat_gateway.account",
            "aws_route_table.account_private",
            "aws_subnet.account_private_b",
            "aws_subnet.account_public_a",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc.statement",
            "aws_vpc_peering_connection.account_statement",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "account_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcb1f8072638724b",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0ad1e9a8e6e584fe5",
            "subnet_id": "subnet-017e6541bdf828227"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-0dcb1f8072638724b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.account",
            "aws_route_table.account_public",
            "aws_subnet.account_public_a",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095610ffffae79702",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0931782e69b69a067",
            "subnet_id": "subnet-02455e5f63d04ebef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-095610ffffae79702",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.customer_nat",
            "aws_internet_gateway.customer-profile",
            "aws_nat_gateway.customer",
            "aws_route_table.customer_private",
            "aws_subnet.customer_private_a",
            "aws_subnet.customer_public_a",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0911decffcfe61f6d",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0931782e69b69a067",
            "subnet_id": "subnet-0552277bcb0935e4d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-0911decffcfe61f6d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.customer_nat",
            "aws_internet_gateway.customer-profile",
            "aws_nat_gateway.customer",
            "aws_route_table.customer_private",
            "aws_subnet.customer_private_b",
            "aws_subnet.customer_public_a",
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015df054e8edbb32c",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-078ac3bc95e46ce04",
            "subnet_id": "subnet-079e98b10ba73f513"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-015df054e8edbb32c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.customer-profile",
            "aws_route_table.customer_public",
            "aws_subnet.customer_public_a",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bbe72651ef90ac2",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-078ac3bc95e46ce04",
            "subnet_id": "subnet-0dd47138873adf3bf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-09bbe72651ef90ac2",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.customer-profile",
            "aws_route_table.customer_public",
            "aws_subnet.customer_public_b",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "statement_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033e6b04a57627212",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-045a4b7b847dba41d",
            "subnet_id": "subnet-02ef7e2d3d957b5e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-033e6b04a57627212",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.statement_nat",
            "aws_internet_gateway.statement",
            "aws_nat_gateway.statement",
            "aws_route_table.statement_private",
            "aws_subnet.statement_private_a",
            "aws_subnet.statement_public_a",
            "aws_vpc.account",
            "aws_vpc.statement",
            "aws_vpc_peering_connection.account_statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "statement_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07016a9af3089caa4",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-045a4b7b847dba41d",
            "subnet_id": "subnet-08e08c555f5ea0f0f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-07016a9af3089caa4",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.statement_nat",
            "aws_internet_gateway.statement",
            "aws_nat_gateway.statement",
            "aws_route_table.statement_private",
            "aws_subnet.statement_private_b",
            "aws_subnet.statement_public_a",
            "aws_vpc.account",
            "aws_vpc.statement",
            "aws_vpc_peering_connection.account_statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "statement_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dc81dc078ce8cf1",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-08e4eccda3c5130d8",
            "subnet_id": "subnet-00de644507aa60ae8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-01dc81dc078ce8cf1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.statement",
            "aws_route_table.statement_public",
            "aws_subnet.statement_public_a",
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "account_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-0445eb2b10c698b80",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0445eb2b10c698b80",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "account-alb-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "account-alb-sg"
            },
            "tags_all": {
              "Name": "account-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-0445eb2b10c698b80",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "account_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-01e225d143b171c3c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e225d143b171c3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0445eb2b10c698b80"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "account-ec2-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "account-ec2-sg"
            },
            "tags_all": {
              "Name": "account-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-01e225d143b171c3c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.account_alb",
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-0de042a6779e852e3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de042a6779e852e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-0de042a6779e852e3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer_profile_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-0ac16b64cd36c6d55",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac16b64cd36c6d55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "customer-profile-alb-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "customer-profile-alb-sg"
            },
            "tags_all": {
              "Name": "customer-profile-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-0ac16b64cd36c6d55",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer_profile_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-099a3c86b74842342",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099a3c86b74842342",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de042a6779e852e3"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac16b64cd36c6d55"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "customer-profile-ec2-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "customer-profile-ec2-sg"
            },
            "tags_all": {
              "Name": "customer-profile-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-099a3c86b74842342",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.customer_profile_alb",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "statement_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-091423fb68ba7217f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091423fb68ba7217f",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "statement-alb-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "statement-alb-sg"
            },
            "tags_all": {
              "Name": "statement-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01026093648037a86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-091423fb68ba7217f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "statement_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-0e6694806d06308c0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6694806d06308c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091423fb68ba7217f"
                ],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "statement-ec2-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "statement-ec2-sg"
            },
            "tags_all": {
              "Name": "statement-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01026093648037a86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-0e6694806d06308c0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.statement_alb",
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "account_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow HTTPS from Customer Profile VPC",
            "from_port": 443,
            "id": "sgrule-2914726616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0445eb2b10c698b80",
            "security_group_rule_id": "sgr-0be3614eb05738a78",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.account_alb",
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "customer_profile_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS from internet",
            "from_port": 443,
            "id": "sgrule-2760350012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0ac16b64cd36c6d55",
            "security_group_rule_id": "sgr-05a28d874169ce2d0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.customer_profile_alb",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "statement_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/16"
            ],
            "description": "Allow HTTPS from Account VPC",
            "from_port": 443,
            "id": "sgrule-3961069642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-091423fb68ba7217f",
            "security_group_rule_id": "sgr-0244db443fdd91bfc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.statement_alb",
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "account_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-0bb9cea61da60288d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb9cea61da60288d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "account-private-subnet-a"
            },
            "tags_all": {
              "Name": "account-private-subnet-a"
            },
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-0bb9cea61da60288d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "account_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-057e14858003920ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057e14858003920ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "account-private-subnet-b"
            },
            "tags_all": {
              "Name": "account-private-subnet-b"
            },
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-057e14858003920ac",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "account_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-017e6541bdf828227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017e6541bdf828227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "account-public-subnet-a"
            },
            "tags_all": {
              "Name": "account-public-subnet-a"
            },
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-017e6541bdf828227",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-02455e5f63d04ebef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02455e5f63d04ebef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "customer-profile-private-subnet-a"
            },
            "tags_all": {
              "Name": "customer-profile-private-subnet-a"
            },
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-02455e5f63d04ebef",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-0552277bcb0935e4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0552277bcb0935e4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "customer-profile-private-subnet-b"
            },
            "tags_all": {
              "Name": "customer-profile-private-subnet-b"
            },
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-0552277bcb0935e4d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-079e98b10ba73f513",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079e98b10ba73f513",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "customer-profile-public-subnet-a"
            },
            "tags_all": {
              "Name": "customer-profile-public-subnet-a"
            },
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-079e98b10ba73f513",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-0dd47138873adf3bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd47138873adf3bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "customer-profile-public-subnet-b"
            },
            "tags_all": {
              "Name": "customer-profile-public-subnet-b"
            },
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-0dd47138873adf3bf",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "statement_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-02ef7e2d3d957b5e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ef7e2d3d957b5e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "statement-private-subnet-a"
            },
            "tags_all": {
              "Name": "statement-private-subnet-a"
            },
            "vpc_id": "vpc-01026093648037a86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-02ef7e2d3d957b5e7",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "statement_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-08e08c555f5ea0f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e08c555f5ea0f0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "statement-private-subnet-b"
            },
            "tags_all": {
              "Name": "statement-private-subnet-b"
            },
            "vpc_id": "vpc-01026093648037a86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-08e08c555f5ea0f0f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "statement_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-00de644507aa60ae8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00de644507aa60ae8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "statement-public-subnet-a"
            },
            "tags_all": {
              "Name": "statement-public-subnet-a"
            },
            "vpc_id": "vpc-01026093648037a86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-00de644507aa60ae8",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:vpc/vpc-0f6141098dbc97744",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0b4dca26fb6badfae",
            "default_route_table_id": "rtb-01f8e2d97bb844d16",
            "default_security_group_id": "sg-0c5e98a16d2ab25eb",
            "dhcp_options_id": "dopt-0b90a22852149bbb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6141098dbc97744",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f8e2d97bb844d16",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "account-vpc"
            },
            "tags_all": {
              "Name": "account-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "vpc-0f6141098dbc97744",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customer-profile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:vpc/vpc-074b950970830d8c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e9e42fb5c60306ff",
            "default_route_table_id": "rtb-0f0fa4b5a11674552",
            "default_security_group_id": "sg-0957d9b2aa5240965",
            "dhcp_options_id": "dopt-0b90a22852149bbb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074b950970830d8c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0fa4b5a11674552",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "customer-profile-vpc"
            },
            "tags_all": {
              "Name": "customer-profile-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "vpc-074b950970830d8c2",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "statement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:vpc/vpc-01026093648037a86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ca61175581c8d8f9",
            "default_route_table_id": "rtb-03266f147a0b4fa49",
            "default_security_group_id": "sg-0c22637ceb37ccffe",
            "dhcp_options_id": "dopt-0b90a22852149bbb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01026093648037a86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03266f147a0b4fa49",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "statement-vpc"
            },
            "tags_all": {
              "Name": "statement-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "vpc-01026093648037a86",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "account_statement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-096af80884c69eb19",
            "peer_owner_id": "810421502375",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-01026093648037a86",
            "region": "ap-southeast-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "account-statement-peer"
            },
            "tags_all": {
              "Name": "account-statement-peer"
            },
            "vpc_id": "vpc-0f6141098dbc97744"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.account",
            "aws_vpc.statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "customer_account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-023cc7ec9aefade2d",
            "peer_owner_id": "810421502375",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-0f6141098dbc97744",
            "region": "ap-southeast-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "customer-account-peer"
            },
            "tags_all": {
              "Name": "customer-account-peer"
            },
            "vpc_id": "vpc-074b950970830d8c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.account",
            "aws_vpc.customer-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "account_statement_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-096af80884c69eb19",
            "region": "ap-southeast-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-096af80884c69eb19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.account",
            "aws_vpc.statement",
            "aws_vpc_peering_connection.account_statement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "customer_account_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-023cc7ec9aefade2d",
            "region": "ap-southeast-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-023cc7ec9aefade2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.account",
            "aws_vpc.customer-profile",
            "aws_vpc_peering_connection.customer_account"
          ]
        }
      ]
    }
  ]
}